--- a/app/src/main/res/layout/activity_splashscreen.xml
+++ b/app/src/main/res/layout/activity_splashscreen.xml
@@ -3,29 +3,30 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@drawable/splashscreen"
+    android:background="@drawable/bg"
     tools:context=".SplashScreen"
     android:contentDescription="@string/logo_discription">
 
 
     <ImageView
         android:id="@+id/logo"
-
-        android:layout_width="250dp"
-        android:layout_height="200dp"
-        android:layout_alignParentStart= "true"
+        android:layout_width="140dp"
+        android:layout_height="145dp"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginStart="100dp"
-        android:layout_marginEnd="100dp"
-        android:layout_marginTop="100dp"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="134dp"
+        android:layout_marginTop="164dp"
+        android:layout_marginEnd="136dp"
         android:contentDescription="@string/logo_discription"
-        />
+        android:src="@drawable/logo_man" />
+
     <TextView
         android:id="@+id/appname"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="beFIT"
+        android:text="@string/app_name"
         android:textSize="45dp"
         android:textColor="#FFF"
         android:textStyle="bold"
