--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-
+    tools:context=".MainActivity"
+    android:background="@color/bg_orange">
     <RelativeLayout
         android:id="@+id/layer_with_progressbar"
         android:layout_width="wrap_content"
@@ -18,6 +17,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/steps"
+            android:textColor="@color/black"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textSize="28dp"/>
@@ -26,6 +26,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Goal: 6000"
+            android:textColor="@color/black"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:textSize="28dp"
@@ -40,18 +41,9 @@
             android:layout_height="300dp"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
-            android:layout_marginTop="150dp"
+            android:layout_marginTop="50dp"
             >
         </ProgressBar>
-
-        <Button
-            android:id="@+id/button_to_graph"
-            android:layout_alignParentBottom="true"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/button_to_graphic"
-            android:layout_centerHorizontal="true"
-            />
 
 
     </RelativeLayout>
@@ -66,19 +58,33 @@
             android:id="@+id/distance_title"
             android:layout_height="wrap_content"
             android:layout_width="wrap_content"
-            android:text="@string/distance_title"
+            android:text="Covered distance:"
+            android:layout_centerHorizontal="true"
+            android:textColor="@color/black"
             android:textSize="16dp"/>
         <TextView
             android:layout_height="wrap_content"
             android:layout_below="@id/distance_title"
             android:layout_centerHorizontal="true"
-            android:layout_width="wrap_content"
-            android:id="@+id/distance_counter"
+            android:layout_width="200dp"
+            android:id="@+id/distance"
+            android:gravity="center"
+            android:textColor="@color/black"
             android:textSize="20dp"
-            android:text="000 км"/>
+            android:text="Разрешите приложению физ. активность"/>
+
+
     </RelativeLayout>
 
-
+    <ImageButton
+        android:id="@+id/button_to_graph"
+        android:layout_marginTop="3dp"
+        android:layout_marginLeft="3dp"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:src="@drawable/profile_icon"
+        android:background="@null"
+        />
 
 
 </RelativeLayout>
